--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^1.12.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-router-dom": "^4.2.2",
     "webpack": "^3.8.1"
   }
 }
