--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bulma-react": "0.0.8",
     "express": "^4.16.2",
     "nodemon": "^1.12.1",
     "react": "^16.1.1",
